Fix trying to get matches for preprocessors without defaults not working